--- a/demos/Intro to ExoCTK.ipynb
+++ b/demos/Intro to ExoCTK.ipynb
@@ -1098,9 +1098,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "exoctk-3.6",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "exoctk-3.6"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1112,7 +1112,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
