--- a/docs/source/intro.ipynb
+++ b/docs/source/intro.ipynb
@@ -4,18 +4,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Introduction to Eureka"
+    "# Introduction to Eureka!"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Authors: Kevin Stevenson, Laura Kreidberg, Sebastian Zieba \n",
+    "Authors: Kevin Stevenson, Laura Kreidberg, Sebastian Zieba, et al.\n",
     "\n",
     "Eureka is a JWST pipeline\n",
     "\n",
-    "In this notebook, we will cover the installation of the software as well as an example"
+    "In this notebook, we will cover the installation of the software as well as an example."
    ]
   },
   {
@@ -1052,36 +1052,8 @@
     "\n",
     "ax.plot(wvl, stdspec)\n",
     "ax.set_xlabel('Wavelength (microns)')\n",
-    "ax.set_ylabel('Flux (MJr/sr)')"
+    "ax.set_ylabel('Flux (MJr/sr)')\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -1338,7 +1310,11 @@
   {
    "cell_type": "code",
    "execution_count": 366,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -1370,63 +1346,6 @@
     "ax.set_xlabel('Wavelength (microns)')\n",
     "ax.set_ylabel('Flux (DN)')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "- barycentric correction"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 69,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Target Coordinates\n",
-    "ra  = mhdr['TARG_RA'] * np.pi / 180.0  # stores right ascension\n",
-    "dec = mhdr['TARG_DEC'] * np.pi / 180.0  # stores right ascension\n",
-    "\n",
-    "mjdutc = int_times['int_mid_MJD_UTC']\n",
-    "#bjdtdb = int_times['int_mid_BJD_TDB']\n",
-    "bjdtdb = barycorr.to_bjdtdb(ev, mjdutc, m)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
