--- a/demos/Run_Eureka.ipynb
+++ b/demos/Run_Eureka.ipynb
@@ -4,35 +4,45 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Run Eureka"
+    "# Run Eureka!"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This Jupyter Notebook will prepare you to run Eureka for the first time."
+    "This Jupyter Notebook will prepare you to run Eureka! for the first time.\n",
+    "\n",
+    "It contains the following tasks:\n",
+    "\n",
+    "```\n",
+    "1. Install Eureka!\n",
+    "2. Download a directory containing:\n",
+    " - Calibrated Images in MJy/sr using NIRCam\n",
+    " - Ancillary data files to convert from MJr/sr to Electrons\n",
+    " - \"Eureka control files (.ecf)\" for Stage 3 and 4\n",
+    " - A run_eureka.py script\n",
+    "3. Enter the data directory into the Eureka control file \n",
+    "4. Run the run_eureka.py script\n",
+    "```"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Install Eureka"
+    "## Install Eureka!"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In order to install Eureka!, open up a terminal window and enter:"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "pip install eureka-hackathon"
+    "In order to install Eureka!, open up a terminal window and enter:\n",
+    "\n",
+    "```\n",
+    "pip install eureka-hackathon\n",
+    "```\n"
    ]
   },
   {
@@ -46,13 +56,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Go on this website TODO LINK and download the directory. It will contain the following structure and files:"
+    "Go on this website TODO ADD LINK and download the directory. It will contain the following structure and files:"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "```\n",
     "- Simulated_JWST_Data/\n",
     " - NIRCam/\n",
     "   - stage2/\n",
@@ -63,14 +74,16 @@
     "- Run_Directory/\n",
     "  - run_eureka.py\n",
     "  - S3_wasp43b.ecf\n",
-    "  - S4_wasp43b.ecf"
+    "  - S4_wasp43b.ecf\n",
+    "  \n",
+    "```"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## About the Simulated NIRCam Data"
+    "### About the Simulated NIRCam Data"
    ]
   },
   {
@@ -101,18 +114,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## About the ancillary data"
+    "### About the ancillary data"
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "In order to convert from MJy/sr to Counts you'll need two files:\n",
     "\n",
+    "```\n",
     "- jwst_nircam_photom_0064.fits\n",
-    "- jwst_nircam_gain_0056.fits\n"
+    "```\n",
+    "This file contains information to convert from brightness units (MJy/sr) to raw units (DN).\n",
+    "```\n",
+    "- jwst_nircam_gain_0056.fits\n",
+    "```\n",
+    "This file contains information to convert from raw units (DN) to electrons."
    ]
   },
   {
@@ -126,23 +144,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Eureka uses a so-called Eureka control file where the user has to specify cetain parameters like the numbers of CPU Cores you want to use or the location of the data you want to analyze. \n",
+    "Eureka uses a so-called Eureka control file where the user has to specify certain parameters like the numbers of CPU Cores you want to use or the location of the data you want to analyze. \n",
     "\n",
-    "We will use Eureka to get from the Stage 2 data to a Stage 3 level. (fully calibrated images (MJy) for each individual integration -> unbinned light curves in Counts for each individual integration) \n",
+    "We will use Eureka to get from the Stage 2 data to a Stage 3 level. \n",
+    "\n",
+    "Stage 2 contain fully calibrated images (MJy) for each individual integration and Stage 3 unbinned light curves in Counts for each individual integration.\n",
     "\n",
     "Set the location of your data in the file (S3_wasp43b.ecf) which you can find the the directory you downloaded. "
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "```\n",
     "# Project directory\n",
     "topdir      /home/user/Desktop/\n",
     "\n",
     "# Directories relative to project dir\n",
     "datadir     /Data/Simulated_JWST_Data/NIRCam/Stage2/\n",
-    "ancildir    /Data/Simulated_JWST_Data/NIRCam/ancil/"
+    "ancildir    /Data/Simulated_JWST_Data/NIRCam/ancil/\n",
+    "```"
    ]
   },
   {
@@ -160,10 +182,12 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "python run_eureka.py"
+    "```\n",
+    "python run_eureka.py\n",
+    "```"
    ]
   },
   {
@@ -188,10 +212,12 @@
     "\n",
     "It will contain the following files:\n",
     "\n",
+    "```\n",
     "- ./S3_wasp43b.log : a log file\n",
     "- ./S3_wasp43b_Save.dat : Data which was saved for Stage 4\n",
     "- figs/\n",
-    "  -  Here you will find several dignostic figures saved during Stage 3"
+    "  -  Here you will find several dignostic figures saved during Stage 3\n",
+    "```"
    ]
   },
   {
