--- a/joss/paper.bib
+++ b/joss/paper.bib
@@ -1,4 +1,4 @@
-@ARTICLE{Stevenson2012,
+@ARTICLE{Stevenson:2012,
        author = {{Stevenson}, Kevin B. and {Harrington}, Joseph and {Fortney}, Jonathan J. and {Loredo}, Thomas J. and {Hardy}, Ryan A. and {Nymeyer}, Sarah and {Bowman}, William C. and {Cubillos}, Patricio and {Bowman}, M. Oliver and {Hardin}, Matthew},
         title = "{Transit and Eclipse Analyses of the Exoplanet HD 149026b Using BLISS Mapping}",
       journal = {\apj},
@@ -17,4 +17,22 @@ archivePrefix = {arXiv},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@ARTICLE{Cubillos:2013,
+       author = {{Cubillos}, Patricio and {Harrington}, Joseph and {Madhusudhan}, Nikku and {Stevenson}, Kevin B. and {Hardy}, Ryan A. and {Blecic}, Jasmina and {Anderson}, David R. and {Hardin}, Matthew and {Campo}, Christopher J.},
+        title = "{WASP-8b: Characterization of a Cool and Eccentric Exoplanet with Spitzer}",
+      journal = {\apj},
+     keywords = {planetary systems, stars: individual: WASP-8, techniques: photometric, Astrophysics - Earth and Planetary Astrophysics},
+         year = 2013,
+        month = may,
+       volume = {768},
+       number = {1},
+          eid = {42},
+        pages = {42},
+          doi = {10.1088/0004-637X/768/1/42},
+archivePrefix = {arXiv},
+       eprint = {1303.5468},
+ primaryClass = {astro-ph.EP},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2013ApJ...768...42C},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
 
