--- a/joss/paper.bib
+++ b/joss/paper.bib
@@ -1,7 +1,7 @@
 @ARTICLE{Stevenson:2012,
        author = {{Stevenson}, Kevin B. and {Harrington}, Joseph and {Fortney}, Jonathan J. and {Loredo}, Thomas J. and {Hardy}, Ryan A. and {Nymeyer}, Sarah and {Bowman}, William C. and {Cubillos}, Patricio and {Bowman}, M. Oliver and {Hardin}, Matthew},
         title = "{Transit and Eclipse Analyses of the Exoplanet HD 149026b Using BLISS Mapping}",
-      journal = {\apj},
+      journal = {ApJ},
      keywords = {planetary systems, stars: individual: HD 149026, techniques: photometric, Astrophysics - Earth and Planetary Astrophysics, Astrophysics - Instrumentation and Methods for Astrophysics},
          year = 2012,
         month = aug,
@@ -20,7 +20,7 @@ archivePrefix = {arXiv},
 @ARTICLE{Cubillos:2013,
        author = {{Cubillos}, Patricio and {Harrington}, Joseph and {Madhusudhan}, Nikku and {Stevenson}, Kevin B. and {Hardy}, Ryan A. and {Blecic}, Jasmina and {Anderson}, David R. and {Hardin}, Matthew and {Campo}, Christopher J.},
         title = "{WASP-8b: Characterization of a Cool and Eccentric Exoplanet with Spitzer}",
-      journal = {\apj},
+      journal = {ApJ},
      keywords = {planetary systems, stars: individual: WASP-8, techniques: photometric, Astrophysics - Earth and Planetary Astrophysics},
          year = 2013,
         month = may,
