Fixing links to other repos, fixing references

--- a/joss/paper.bib
+++ b/joss/paper.bib
@@ -36,3 +36,57 @@ archivePrefix = {arXiv},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@ARTICLE{Dang:2018,
+       author = {{Dang}, Lisa and {Cowan}, Nicolas B. and {Schwartz}, Joel C. and {Rauscher}, Emily and {Zhang}, Michael and {Knutson}, Heather A. and {Line}, Michael and {Dobbs-Dixon}, Ian and {Deming}, Drake and {Sundararajan}, Sudarsan and {Fortney}, Jonathan J. and {Zhao}, Ming},
+        title = "{Detection of a westward hotspot offset in the atmosphere of hot gas giant CoRoT-2b}",
+      journal = {Nature Astronomy},
+     keywords = {Astrophysics - Earth and Planetary Astrophysics},
+         year = 2018,
+        month = mar,
+       volume = {2},
+        pages = {220-227},
+          doi = {10.1038/s41550-017-0351-6},
+archivePrefix = {arXiv},
+       eprint = {1801.06548},
+ primaryClass = {astro-ph.EP},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2018NatAs...2..220D},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Bell:2018,
+       author = {{Bell}, Taylor J. and {Cowan}, Nicolas B.},
+        title = "{Increased Heat Transport in Ultra-hot Jupiter Atmospheres through H$_{2}$ Dissociation and Recombination}",
+      journal = {\apjl},
+     keywords = {methods: analytical, methods: numerical, planets and satellites: atmospheres, planets and satellites: gaseous planets, Astrophysics - Earth and Planetary Astrophysics},
+         year = 2018,
+        month = apr,
+       volume = {857},
+       number = {2},
+          eid = {L20},
+        pages = {L20},
+          doi = {10.3847/2041-8213/aabcc8},
+archivePrefix = {arXiv},
+       eprint = {1802.07725},
+ primaryClass = {astro-ph.EP},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2018ApJ...857L..20B},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Bell:2021,
+       author = {{Bell}, Taylor J. and {Dang}, Lisa and {Cowan}, Nicolas B. and {Bean}, Jacob and {D{\'e}sert}, Jean-Michel and {Fortney}, Jonathan J. and {Keating}, Dylan and {Kempton}, Eliza and {Kreidberg}, Laura and {Line}, Michael R. and {Mansfield}, Megan and {Parmentier}, Vivien and {Stevenson}, Kevin B. and {Swain}, Mark and {Zellem}, Robert T.},
+        title = "{A comprehensive reanalysis of Spitzer's 4.5 {\ensuremath{\mu}}m phase curves, and the phase variations of the ultra-hot Jupiters MASCARA-1b and KELT-16b}",
+      journal = {MNRAS},
+     keywords = {techniques: photometric, planets and satellites: individual (KELT-16b), planets and satellites: individual (MASCARA-1b), Astrophysics - Earth and Planetary Astrophysics},
+         year = 2021,
+        month = jul,
+       volume = {504},
+       number = {3},
+        pages = {3316-3337},
+          doi = {10.1093/mnras/stab1027},
+archivePrefix = {arXiv},
+       eprint = {2010.00687},
+ primaryClass = {astro-ph.EP},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2021MNRAS.504.3316B},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
