Adding statement of need, citations, fixing typos
More work on the first draft of the JOSS paper. The current word count
is around 900 words, so little more can be added without also removing
text.

--- a/joss/paper.bib
+++ b/joss/paper.bib
@@ -90,3 +90,32 @@ archivePrefix = {arXiv},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@MISC{exoplanet:2021,
+       author = {{Foreman-Mackey}, Daniel and {Luger}, Rodrigo and {Agol}, Eric and {Barclay}, Thomas and {Bouma}, Luke G. and {Brandt}, Timothy D. and {Czekala}, Ian and {David}, Trevor J. and {Dong}, Jiayin and {Gilbert}, Emily A. and {Gordon}, Tyler A. and {Hedges}, Christina and {Hey}, Daniel R. and {Morris}, Brett M. and {Price-Whelan}, Adrian M. and {Savel}, Arjun B.},
+        title = "{exoplanet: Gradient-based probabilistic inference for exoplanet data \& other astronomical time series}",
+ howpublished = {Zenodo},
+         year = 2021,
+        month = jun,
+          eid = {10.5281/zenodo.1998447},
+          doi = {10.5281/zenodo.1998447},
+      version = {0.5.1},
+    publisher = {Zenodo},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2021zndo...1998447F},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{juliet:2018,
+       author = {{Espinoza}, N{\'e}stor and {Kossakowski}, Diana and {Brahm}, Rafael},
+        title = "{Juliet: a versatile modelling tool for transiting and non-transiting exoplanetary systems}",
+      journal = {arXiv e-prints},
+     keywords = {Astrophysics - Earth and Planetary Astrophysics},
+         year = 2018,
+        month = Dec,
+          eid = {arXiv:1812.08549},
+        pages = {arXiv:1812.08549},
+archivePrefix = {arXiv},
+       eprint = {1812.08549},
+ primaryClass = {astro-ph.EP},
+       adsurl = {https://ui.adsabs.harvard.edu/\#abs/2018arXiv181208549E},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
