Stevenson:2014a citation, minor tweaks

--- a/joss/paper.bib
+++ b/joss/paper.bib
@@ -36,6 +36,25 @@ archivePrefix = {arXiv},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@ARTICLE{Stevenson:2014a,
+       author = {{Stevenson}, Kevin B. and {Bean}, Jacob L. and {Seifahrt}, Andreas and {D{\'e}sert}, Jean-Michel and {Madhusudhan}, Nikku and {Bergmann}, Marcel and {Kreidberg}, Laura and {Homeier}, Derek},
+        title = "{Transmission Spectroscopy of the Hot Jupiter WASP-12b from 0.7 to 5 {\ensuremath{\mu}}m}",
+      journal = {\aj},
+     keywords = {planetary systems, stars: individual: WASP-12, techniques: spectroscopic, Astrophysics - Earth and Planetary Astrophysics},
+         year = 2014,
+        month = jun,
+       volume = {147},
+       number = {6},
+          eid = {161},
+        pages = {161},
+          doi = {10.1088/0004-6256/147/6/161},
+archivePrefix = {arXiv},
+       eprint = {1305.1670},
+ primaryClass = {astro-ph.EP},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2014AJ....147..161S},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
 @ARTICLE{Dang:2018,
        author = {{Dang}, Lisa and {Cowan}, Nicolas B. and {Schwartz}, Joel C. and {Rauscher}, Emily and {Zhang}, Michael and {Knutson}, Heather A. and {Line}, Michael and {Dobbs-Dixon}, Ian and {Deming}, Drake and {Sundararajan}, Sudarsan and {Fortney}, Jonathan J. and {Zhao}, Ming},
         title = "{Detection of a westward hotspot offset in the atmosphere of hot gas giant CoRoT-2b}",
