Fixing journals in .bib file

--- a/joss/paper.bib
+++ b/joss/paper.bib
@@ -39,7 +39,7 @@ archivePrefix = {arXiv},
 @ARTICLE{Stevenson:2014a,
        author = {{Stevenson}, Kevin B. and {Bean}, Jacob L. and {Seifahrt}, Andreas and {D{\'e}sert}, Jean-Michel and {Madhusudhan}, Nikku and {Bergmann}, Marcel and {Kreidberg}, Laura and {Homeier}, Derek},
         title = "{Transmission Spectroscopy of the Hot Jupiter WASP-12b from 0.7 to 5 {\ensuremath{\mu}}m}",
-      journal = {\aj},
+      journal = {AJ},
      keywords = {planetary systems, stars: individual: WASP-12, techniques: spectroscopic, Astrophysics - Earth and Planetary Astrophysics},
          year = 2014,
         month = jun,
@@ -75,7 +75,7 @@ archivePrefix = {arXiv},
 @ARTICLE{Bell:2018,
        author = {{Bell}, Taylor J. and {Cowan}, Nicolas B.},
         title = "{Increased Heat Transport in Ultra-hot Jupiter Atmospheres through H$_{2}$ Dissociation and Recombination}",
-      journal = {\apjl},
+      journal = {ApJL},
      keywords = {methods: analytical, methods: numerical, planets and satellites: atmospheres, planets and satellites: gaseous planets, Astrophysics - Earth and Planetary Astrophysics},
          year = 2018,
         month = apr,
