Adding jwst package citation

--- a/joss/paper.bib
+++ b/joss/paper.bib
@@ -138,3 +138,13 @@ archivePrefix = {arXiv},
        adsurl = {https://ui.adsabs.harvard.edu/\#abs/2018arXiv181208549E},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
+
+
+@misc{jwst:2022,
+  author = {{JWST calibration pipeline developers}},
+  title = {{jwst}: Python library for science observations from the James Webb Space Telescope},
+  year = {2022},
+  publisher = {GitHub},
+  journal = {GitHub repository},
+  url = {https://github.com/spacetelescope/jwst}
+}
