Resolving Laura's comments, added flowchart figure

--- a/joss/paper.bib
+++ b/joss/paper.bib
@@ -139,6 +139,24 @@ archivePrefix = {arXiv},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@ARTICLE{kreidberg:2014,
+       author = {{Kreidberg}, Laura and {Bean}, Jacob L. and {D{\'e}sert}, Jean-Michel and {Benneke}, Bj{\"o}rn and {Deming}, Drake and {Stevenson}, Kevin B. and {Seager}, Sara and {Berta-Thompson}, Zachory and {Seifahrt}, Andreas and {Homeier}, Derek},
+        title = "{Clouds in the atmosphere of the super-Earth exoplanet GJ 1214b}",
+      journal = {Nature},
+     keywords = {Astrophysics - Earth and Planetary Astrophysics},
+         year = 2014,
+        month = jan,
+       volume = {505},
+       number = {7481},
+        pages = {69-72},
+          doi = {10.1038/nature12888},
+archivePrefix = {arXiv},
+       eprint = {1401.0022},
+ primaryClass = {astro-ph.EP},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2014Natur.505...69K},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
 
 @misc{jwst:2022,
   author = {{JWST calibration pipeline developers}},
@@ -147,4 +165,13 @@ archivePrefix = {arXiv},
   publisher = {GitHub},
   journal = {GitHub repository},
   url = {https://github.com/spacetelescope/jwst}
+}
+
+@misc{pacman:2022,
+  author = {{Zieba}, Sebastian and {Kreidberg}, Laura},
+  title = {{PACMAN}},
+  year = {2022},
+  publisher = {GitHub},
+  journal = {GitHub repository},
+  url = {https://github.com/sebastian-zieba/PACMAN}
 }
