Fixing minor issues with references

--- a/joss/paper.bib
+++ b/joss/paper.bib
@@ -109,6 +109,25 @@ archivePrefix = {arXiv},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@ARTICLE{Kreidberg:2014,
+       author = {{Kreidberg}, Laura and {Bean}, Jacob L. and {D{\'e}sert}, Jean-Michel and {Benneke}, Bj{\"o}rn and {Deming}, Drake and {Stevenson}, Kevin B. and {Seager}, Sara and {Berta-Thompson}, Zachory and {Seifahrt}, Andreas and {Homeier}, Derek},
+        title = "{Clouds in the atmosphere of the super-Earth exoplanet GJ 1214b}",
+      journal = {Nature},
+     keywords = {Astrophysics - Earth and Planetary Astrophysics},
+         year = 2014,
+        month = jan,
+       volume = {505},
+       number = {7481},
+        pages = {69-72},
+          doi = {10.1038/nature12888},
+archivePrefix = {arXiv},
+       eprint = {1401.0022},
+ primaryClass = {astro-ph.EP},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2014Natur.505...69K},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
 @MISC{exoplanet:2021,
        author = {{Foreman-Mackey}, Daniel and {Luger}, Rodrigo and {Agol}, Eric and {Barclay}, Thomas and {Bouma}, Luke G. and {Brandt}, Timothy D. and {Czekala}, Ian and {David}, Trevor J. and {Dong}, Jiayin and {Gilbert}, Emily A. and {Gordon}, Tyler A. and {Hedges}, Christina and {Hey}, Daniel R. and {Morris}, Brett M. and {Price-Whelan}, Adrian M. and {Savel}, Arjun B.},
         title = "{exoplanet: Gradient-based probabilistic inference for exoplanet data \& other astronomical time series}",
@@ -138,25 +157,6 @@ archivePrefix = {arXiv},
        adsurl = {https://ui.adsabs.harvard.edu/\#abs/2018arXiv181208549E},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
-
-@ARTICLE{kreidberg:2014,
-       author = {{Kreidberg}, Laura and {Bean}, Jacob L. and {D{\'e}sert}, Jean-Michel and {Benneke}, Bj{\"o}rn and {Deming}, Drake and {Stevenson}, Kevin B. and {Seager}, Sara and {Berta-Thompson}, Zachory and {Seifahrt}, Andreas and {Homeier}, Derek},
-        title = "{Clouds in the atmosphere of the super-Earth exoplanet GJ 1214b}",
-      journal = {Nature},
-     keywords = {Astrophysics - Earth and Planetary Astrophysics},
-         year = 2014,
-        month = jan,
-       volume = {505},
-       number = {7481},
-        pages = {69-72},
-          doi = {10.1038/nature12888},
-archivePrefix = {arXiv},
-       eprint = {1401.0022},
- primaryClass = {astro-ph.EP},
-       adsurl = {https://ui.adsabs.harvard.edu/abs/2014Natur.505...69K},
-      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
-}
-
 
 @misc{jwst:2022,
   author = {{JWST calibration pipeline developers}},
