Adding requested science references from #423

--- a/joss/paper.bib
+++ b/joss/paper.bib
@@ -1,3 +1,115 @@
+@ARTICLE{JWST:2006,
+       author = {{Gardner}, Jonathan P. and {Mather}, John C. and {Clampin}, Mark and {Doyon}, Rene and {Greenhouse}, Matthew A. and {Hammel}, Heidi B. and {Hutchings}, John B. and {Jakobsen}, Peter and {Lilly}, Simon J. and {Long}, Knox S. and {Lunine}, Jonathan I. and {McCaughrean}, Mark J. and {Mountain}, Matt and {Nella}, John and {Rieke}, George H. and {Rieke}, Marcia J. and {Rix}, Hans-Walter and {Smith}, Eric P. and {Sonneborn}, George and {Stiavelli}, Massimo and {Stockman}, H.~S. and {Windhorst}, Rogier A. and {Wright}, Gillian S.},
+        title = "{The James Webb Space Telescope}",
+      journal = {\ssr},
+     keywords = {galaxies: formation, infrared: general, planetary systems, space vehicles: instruments, stars: formation, Astrophysics},
+         year = 2006,
+        month = apr,
+       volume = {123},
+       number = {4},
+        pages = {485-606},
+          doi = {10.1007/s11214-006-8315-7},
+archivePrefix = {arXiv},
+       eprint = {astro-ph/0606175},
+ primaryClass = {astro-ph},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2006SSRv..123..485G},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{MIRI:2015,
+       author = {{Rieke}, G.~H. and {Wright}, G.~S. and {B{\"o}ker}, T. and {Bouwman}, J. and {Colina}, L. and {Glasse}, Alistair and {Gordon}, K.~D. and {Greene}, T.~P. and {G{\"u}del}, Manuel and {Henning}, Th. and {Justtanont}, K. and {Lagage}, P. -O. and {Meixner}, M.~E. and {N{\o}rgaard-Nielsen}, H. -U. and {Ray}, T.~P. and {Ressler}, M.~E. and {van Dishoeck}, E.~F. and {Waelkens}, C.},
+        title = "{The Mid-Infrared Instrument for the James Webb Space Telescope, I: Introduction}",
+      journal = {\pasp},
+     keywords = {Astrophysics - Instrumentation and Methods for Astrophysics},
+         year = 2015,
+        month = jul,
+       volume = {127},
+       number = {953},
+        pages = {584},
+          doi = {10.1086/682252},
+archivePrefix = {arXiv},
+       eprint = {1508.02294},
+ primaryClass = {astro-ph.IM},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2015PASP..127..584R},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@INPROCEEDINGS{NIRCam:2004,
+       author = {{Horner}, Scott D. and {Rieke}, Marcia J.},
+        title = "{The near-infrared camera (NIRCam) for the James Webb Space Telescope (JWST)}",
+    booktitle = {Optical, Infrared, and Millimeter Space Telescopes},
+         year = 2004,
+       editor = {{Mather}, John C.},
+       series = {Society of Photo-Optical Instrumentation Engineers (SPIE) Conference Series},
+       volume = {5487},
+        month = oct,
+        pages = {628-634},
+          doi = {10.1117/12.552281},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2004SPIE.5487..628H},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@INPROCEEDINGS{NIRSpec:2007,
+       author = {{Bagnasco}, Giorgio and {Kolm}, Manfred and {Ferruit}, Pierre and {Honnen}, Karl and {Koehler}, Jess and {Lemke}, Robert and {Maschmann}, Marc and {Melf}, Markus and {Noyer}, George and {Rumler}, Peter and {Salvignol}, Jean-Christophe and {Strada}, Paolo and {Te Plate}, Maurice},
+        title = "{Overview of the near-infrared spectrograph (NIRSpec) instrument on-board the James Webb Space Telescope (JWST)}",
+    booktitle = {Cryogenic Optical Systems and Instruments XII},
+         year = 2007,
+       editor = {{Heaney}, James B. and {Burriesci}, Lawrence G.},
+       series = {Society of Photo-Optical Instrumentation Engineers (SPIE) Conference Series},
+       volume = {6692},
+        month = sep,
+          eid = {66920M},
+        pages = {66920M},
+          doi = {10.1117/12.735602},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2007SPIE.6692E..0MB},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@INPROCEEDINGS{NIRISS:2017,
+       author = {{Maszkiewicz}, Michael},
+        title = "{Near- infrared imager and slitless spectrograph (NIRISS): a new instrument on James Webb Space Telescope (JWST)}",
+    booktitle = {Society of Photo-Optical Instrumentation Engineers (SPIE) Conference Series},
+         year = 2017,
+       series = {Society of Photo-Optical Instrumentation Engineers (SPIE) Conference Series},
+       volume = {10564},
+        month = nov,
+          eid = {105642Q},
+        pages = {105642Q},
+          doi = {10.1117/12.2309161},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2017SPIE10564E..2QM},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{HST:1986,
+       author = {{Bahcall}, N.~A.},
+        title = "{The Hubble Space Telescope.}",
+      journal = {Annals of the New York Academy of Sciences},
+     keywords = {Hubble Space Telescope, Spaceborne Astronomy, Active Galactic Nuclei, Angular Resolution, Cosmology, Galactic Evolution, High Resolution, Quasars, Stellar Luminosity, Ultraviolet Astronomy, Astronomy, Space Telescope},
+         year = 1986,
+        month = jan,
+       volume = {470},
+        pages = {331-337},
+          doi = {10.1111/j.1749-6632.1986.tb47983.x},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/1986NYASA.470..331B},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@INPROCEEDINGS{WFC3:2008,
+       author = {{Kimble}, Randy A. and {MacKenty}, John W. and {O'Connell}, Robert W. and {Townsend}, Jacqueline A.},
+        title = "{Wide Field Camera 3: a powerful new imager for the Hubble Space Telescope}",
+    booktitle = {Space Telescopes and Instrumentation 2008: Optical, Infrared, and Millimeter},
+         year = 2008,
+       editor = {{Oschmann}, Jacobus M., Jr. and {de Graauw}, Mattheus W.~M. and {MacEwen}, Howard A.},
+       series = {Society of Photo-Optical Instrumentation Engineers (SPIE) Conference Series},
+       volume = {7010},
+        month = jul,
+          eid = {70101E},
+        pages = {70101E},
+          doi = {10.1117/12.789581},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2008SPIE.7010E..1EK},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
 @ARTICLE{Stevenson:2012,
        author = {{Stevenson}, Kevin B. and {Harrington}, Joseph and {Fortney}, Jonathan J. and {Loredo}, Thomas J. and {Hardy}, Ryan A. and {Nymeyer}, Sarah and {Bowman}, William C. and {Cubillos}, Patricio and {Bowman}, M. Oliver and {Hardin}, Matthew},
         title = "{Transit and Eclipse Analyses of the Exoplanet HD 149026b Using BLISS Mapping}",
