Fixing typo in JWST pipeline bibtex title

--- a/joss/paper.bib
+++ b/joss/paper.bib
@@ -299,7 +299,7 @@ archivePrefix = {arXiv},
                   Bradley, Larry and
                   Shanahan, Clare and
                   Jamieson, William},
-  title        = {JWST Calibration Pipeline 1.6.2,
+  title        = "{JWST Calibration Pipeline 1.6.2}",
   month        = aug,
   year         = 2022,
   publisher    = {Zenodo},
