Adding more context to State of the field text

--- a/joss/paper.bib
+++ b/joss/paper.bib
@@ -316,3 +316,12 @@ archivePrefix = {arXiv},
   journal = {GitHub repository},
   url = {https://github.com/sebastian-zieba/PACMAN}
 }
+
+@misc{tshirt:2022,
+  author = {{Schlawin}, Everett and {Glidic}, Kayli},
+  title = {{tshirt}},
+  year = {2022},
+  publisher = {GitHub},
+  journal = {GitHub repository},
+  url = {https://github.com/eas342/tshirt}
+}
