Various comments from initial PR

--- a/docs/source/tutorials/formatting_eureka_s4_compatible_data.ipynb
+++ b/docs/source/tutorials/formatting_eureka_s4_compatible_data.ipynb
@@ -195,7 +195,7 @@
    "id": "6e1573b1-6745-4b23-86f0-740d6e95d00a",
    "metadata": {},
    "source": [
-    "Note that these values are entirely made up for the purpose of this notebook - you should be setting these variables *your* data values!\n",
+    "Note that these values are entirely made up for the purpose of this notebook - you should be setting these variables to *your* data values!\n",
     "&nbsp;\n",
     "\n",
     "To build the xarray, we will again use the [astraeus](https://kevin218.github.io/Astraeus/) library. Let's start by initialising a dataset:"
