Tweaking photom section of tutorial to read in actual photom data

--- a/docs/source/tutorials/formatting_eureka_s4_compatible_data.ipynb
+++ b/docs/source/tutorials/formatting_eureka_s4_compatible_data.ipynb
@@ -397,33 +397,37 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Finished loading parameters from /Users/acarter/Documents/TRANSITS/EUREKA/ALTERNATE_INPUTS/NIRCam_TESTING/Stage3/S3_2024-01-10_nircam_template_run1/ap8_bg8/S3_nircam_template_ap8_bg8_SpecData.h5\n",
+      "Finished loading parameters from /Users/acarter/Documents/TRANSITS/EUREKA/ALTERNATE_INPUTS/NIRCam_TESTING/Stage3_Photom/S3_2024-04-30_nircam_template_run2/ap60_bg70_90/S3_nircam_template_ap60_bg70_90_SpecData.h5\n",
       "<xarray.Dataset>\n",
-      "Dimensions:      (time: 128, y: 59, x: 1600)\n",
+      "Dimensions:      (time: 119, y: 252, x: 1024)\n",
       "Coordinates:\n",
-      "  * time         (time) float64 5.969e+04 5.969e+04 ... 5.969e+04 5.969e+04\n",
-      "  * y            (y) int64 5 6 7 8 9 10 11 12 13 ... 55 56 57 58 59 60 61 62 63\n",
-      "  * x            (x) int64 100 101 102 103 104 105 ... 1695 1696 1697 1698 1699\n",
-      "Data variables:\n",
+      "  * time         (time) float64 5.978e+04 5.978e+04 ... 5.978e+04 5.978e+04\n",
+      "  * y            (y) int64 4 5 6 7 8 9 10 11 ... 248 249 250 251 252 253 254 255\n",
+      "  * x            (x) int64 512 513 514 515 516 517 ... 1531 1532 1533 1534 1535\n",
+      "Data variables: (12/14)\n",
       "    wave_1d      (x) float32 ...\n",
-      "    medflux      (y, x) float64 ...\n",
+      "    centroid_x   (time) float64 ...\n",
       "    centroid_y   (time) float64 ...\n",
+      "    centroid_sx  (time) float64 ...\n",
       "    centroid_sy  (time) float64 ...\n",
-      "    stdspec      (time, x) float32 ...\n",
-      "    stdvar       (time, x) float32 ...\n",
-      "    optspec      (time, x) float64 ...\n",
-      "    opterr       (time, x) float64 ...\n",
-      "    optmask      (time, x) bool ...\n",
-      "Attributes: (12/74)\n",
+      "    aplev        (time) float64 ...\n",
+      "    ...           ...\n",
+      "    skylev       (time) float64 ...\n",
+      "    skyerr       (time) float64 ...\n",
+      "    nskypix      (time) float64 ...\n",
+      "    nskyideal    (time) float64 ...\n",
+      "    status       (time) float64 ...\n",
+      "    betaper      (time) float64 ...\n",
+      "Attributes: (12/68)\n",
       "    ncpu:                  1\n",
       "    nfiles:                1\n",
       "    max_memory:            0.5\n",
-      "    indep_batches:         False\n",
       "    suffix:                calints\n",
-      "    calibrated_spectra:    False\n",
+      "    photometry:            True\n",
+      "    convert_to_e:          True\n",
       "    ...                    ...\n",
-      "    bg_y2:                 38\n",
-      "    bg_y1:                 21\n",
+      "    skyout:                90\n",
+      "    gainfile:              /Users/acarter/crds_cache/references/jwst/nircam/j...\n",
       "    save_fluxdata:         False\n",
       "    citations:             ['astraeus', 'astropy', 'crds', 'eureka', 'h5py', ...\n",
       "    bibliography:          ['@misc{astraeus,\\n            author = {{Stevenso...\n",
@@ -432,8 +436,7 @@
     }
    ],
    "source": [
-    "# TO FINISH, NEED ACTUAL PHOTOM FILE\n",
-    "photom_file = base_dir + 'Stage3/S3_2024-01-10_nircam_template_run1/ap8_bg8/S3_nircam_template_ap8_bg8_SpecData.h5'\n",
+    "photom_file = base_dir + 'Stage3_Photom/S3_2024-04-30_nircam_template_run2/ap60_bg70_90/S3_nircam_template_ap60_bg70_90_SpecData.h5'\n",
     "photom_data = readXR(photom_file)\n",
     "print(photom_data)"
    ]
@@ -489,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "id": "04206681-8b70-45f4-9b9f-f06293ff7876",
    "metadata": {},
    "outputs": [
@@ -530,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "id": "b3d2293a-0ae6-4c9d-b8a6-17505d6d108a",
    "metadata": {},
    "outputs": [
@@ -538,7 +541,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Finished writing to /Users/acarter/Documents/TRANSITS/EUREKA/ALTERNATE_INPUTS/NIRCam_TESTING/Custom_Photom_Input/S3_custom_dataset_SpecData.h5\n"
+      "Finished writing to /Users/acarter/Documents/TRANSITS/EUREKA/ALTERNATE_INPUTS/NIRCam_TESTING/Custom_Photom_Input/S3_photom_dataset_SpecData.h5\n"
      ]
     },
     {
@@ -547,7 +550,7 @@
        "True"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
